# wordcel

./: .gitignore  Anchor.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
cli/: index.ts
data/: gm.json
idl/: invite.json  wordcel.json
programs/invite/: Cargo.toml
programs/invite/src/: lib.rs
programs/slugger/: Cargo.toml
programs/slugger/src/: lib.rs
programs/wordcel/: Cargo.toml
programs/wordcel/src/: error.rs  events.rs  instructions.rs  lib.rs  state.rs
scripts/: cli.ts
tests/: editor.spec.ts  invite.spec.ts  invite.ts  slugger.spec.ts  transfer.spec.ts  wordcel.spec.ts  wordcel.ts
tests/utils/: index.ts  invite.ts
