[package]
name = "wordcel"
version = "0.1.1"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "wordcel"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["invite"]
devnet = ["invite", "invite/devnet"]
mainnet = ["invite", "invite/mainnet"]

[dependencies]
anchor-lang = "0.24.2"
invite = { path = "../invite", features = ["cpi"], optional = true }
solana-security-txt = "1.0.1"