[package]
name = "wordcel"
version = "2.0.2"
edition = "2018"
license = "GPL-3.0-or-later"
description = "Wordcel Legacy Program"
repository = "https://github.com/Wordcel/wordcel"


[lib]
crate-type = ["cdylib", "lib"]
name = "wordcel"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
mainnet = []
devnet = []

[dependencies]
anchor-lang = "0.24.2"
